--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sfere-pro-news-dashboard",
+  "name": "sfere-pro-admin-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -47,6 +47,7 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
+    "loadash": "^1.0.0",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -67,6 +68,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/he": "^1.2.3",
     "@types/node": "^22.13.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
