--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -69,6 +71,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/he": "^1.2.3",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
